SSM-3036: adding context variable setting ui component to the assertion properties dialogs
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@27402 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/assertions/XacmlPdpAssertion/src/main/java/com/l7tech/external/assertions/xacmlpdp/console/resources/XacmlPdpPropertiesDialog.form
+++ b/modules/gateway/assertions/XacmlPdpAssertion/src/main/java/com/l7tech/external/assertions/xacmlpdp/console/resources/XacmlPdpPropertiesDialog.form
@@ -258,21 +258,21 @@
           </grid>
           <component id="6f816" class="javax.swing.JLabel" binding="messageVariableLabel">
             <constraints>
-              <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+              <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="9" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <labelFor value="20f9c"/>
               <text resource-bundle="com/l7tech/external/assertions/xacmlpdp/console/XacmlPdpPropertiesDialog" key="message.variable"/>
             </properties>
           </component>
-          <component id="20f9c" class="javax.swing.JTextField" binding="outputMessageVariableNameField">
+          <grid id="891a8" binding="outputMessageVariableNamePanel" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+            <margin top="0" left="0" bottom="0" right="0"/>
             <constraints>
-              <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
-                <preferred-size width="150" height="-1"/>
-              </grid>
+              <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties/>
-          </component>
+            <border type="none"/>
+            <children/>
+          </grid>
         </children>
       </grid>
       <grid id="9b676" layout-manager="GridLayoutManager" row-count="1" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
