--- a/modules/gateway/assertions/EncodeDecodeAssertion/src/main/java/com/l7tech/external/assertions/encodedecode/console/EncodeDecodePropertiesDialog.form
+++ b/modules/gateway/assertions/EncodeDecodeAssertion/src/main/java/com/l7tech/external/assertions/encodedecode/console/EncodeDecodePropertiesDialog.form
@@ -27,20 +27,11 @@
       </component>
       <component id="88467" class="javax.swing.JLabel">
         <constraints>
-          <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+          <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="9" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <labelFor value="75f2c"/>
           <text value="&amp;Target Variable:"/>
         </properties>
-      </component>
-      <component id="75f2c" class="javax.swing.JTextField" binding="targetVariableTextField" default-binding="true">
-        <constraints>
-          <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
-            <preferred-size width="150" height="-1"/>
-          </grid>
-        </constraints>
-        <properties/>
       </component>
       <component id="bad77" class="javax.swing.JLabel">
         <constraints>
@@ -184,6 +175,15 @@
           </grid>
         </constraints>
       </hspacer>
+      <grid id="d42e4" binding="targetVariablePanel" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+        <margin top="0" left="0" bottom="0" right="0"/>
+        <constraints>
+          <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties/>
+        <border type="none"/>
+        <children/>
+      </grid>
     </children>
   </grid>
 </form>
