--- a/modules/gateway/assertions/IdentityAttributesAssertion/src/main/java/com/l7tech/external/assertions/idattr/console/resources/UserAttributeMappingDialog.form
+++ b/modules/gateway/assertions/IdentityAttributesAssertion/src/main/java/com/l7tech/external/assertions/idattr/console/resources/UserAttributeMappingDialog.form
@@ -92,37 +92,17 @@
           <grid row="6" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <labelFor value="9ea47"/>
           <text resource-bundle="com/l7tech/external/assertions/idattr/console/resources/UserAttributeMappingDialog" key="variableNameField.label"/>
         </properties>
       </component>
-      <grid id="417a5" layout-manager="GridLayoutManager" row-count="1" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="0" vgap="-1">
+      <grid id="417a5" binding="variableNamePanel" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="0" vgap="-1">
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
           <grid row="7" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties/>
         <border type="none"/>
-        <children>
-          <component id="9ea47" class="javax.swing.JTextField" binding="variableNameField">
-            <constraints>
-              <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
-                <preferred-size width="150" height="-1"/>
-              </grid>
-            </constraints>
-            <properties>
-              <text value=""/>
-            </properties>
-          </component>
-          <component id="b4241" class="javax.swing.JLabel" binding="variablePrefixLabel">
-            <constraints>
-              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="4" fill="0" indent="0" use-parent-layout="false"/>
-            </constraints>
-            <properties>
-              <text resource-bundle="com/l7tech/external/assertions/idattr/console/resources/UserAttributeMappingDialog" key="variablePrefixLabel.userText"/>
-            </properties>
-          </component>
-        </children>
+        <children/>
       </grid>
       <component id="df6ea" class="javax.swing.JCheckBox" binding="multivaluedCheckBox" default-binding="true">
         <constraints>
