--- a/modules/gateway/assertions/IpmAssertion/src/main/java/com/l7tech/external/assertions/ipm/console/resources/IpmPropertiesDialog.form
+++ b/modules/gateway/assertions/IpmAssertion/src/main/java/com/l7tech/external/assertions/ipm/console/resources/IpmPropertiesDialog.form
@@ -120,18 +120,16 @@
               </component>
               <component id="c1be" class="javax.swing.JRadioButton" binding="contextVariableRadioButton" default-binding="true">
                 <constraints>
-                  <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                  <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="9" fill="0" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
                   <selected value="true"/>
                   <text value="Context &amp;Variable:"/>
                 </properties>
               </component>
-              <component id="5dcbd" class="com.l7tech.gui.widgets.SquigglyTextField" binding="destVarField">
+              <component id="5dcbd" class="javax.swing.JPanel" binding="destVarPanel">
                 <constraints>
-                  <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="3" hsize-policy="7" anchor="0" fill="1" indent="0" use-parent-layout="false">
-                    <minimum-size width="240" height="12"/>
-                  </grid>
+                  <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="3" hsize-policy="7" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties/>
               </component>
