--- a/modules/gateway/assertions/MTOMAssertion/src/main/java/com/l7tech/external/assertions/mtom/console/MtomEncodeAssertionPropertiesDialog.form
+++ b/modules/gateway/assertions/MTOMAssertion/src/main/java/com/l7tech/external/assertions/mtom/console/MtomEncodeAssertionPropertiesDialog.form
@@ -49,20 +49,11 @@
           </component>
           <component id="7e70a" class="javax.swing.JLabel">
             <constraints>
-              <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+              <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="9" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <labelFor value="b6c32"/>
               <text resource-bundle="com/l7tech/external/assertions/mtom/console/MtomEncodeAssertionPropertiesDialog" key="messagetargetvariable.label"/>
             </properties>
-          </component>
-          <component id="b6c32" class="javax.swing.JTextField" binding="messageTargetVariableNameTextField">
-            <constraints>
-              <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
-                <preferred-size width="150" height="-1"/>
-              </grid>
-            </constraints>
-            <properties/>
           </component>
           <component id="486fb" class="javax.swing.JComboBox" binding="messageTargetComboBox">
             <constraints>
@@ -70,6 +61,15 @@
             </constraints>
             <properties/>
           </component>
+          <grid id="1ab1c" binding="messageTargetVariableNamePanel" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+            <margin top="0" left="0" bottom="0" right="0"/>
+            <constraints>
+              <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties/>
+            <border type="none"/>
+            <children/>
+          </grid>
         </children>
       </grid>
       <grid id="179cc" layout-manager="GridLayoutManager" row-count="3" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
