--- a/modules/gateway/assertions/SplitJoinAssertion/src/main/java/com/l7tech/external/assertions/splitjoin/console/SplitVariablePropertiesDialog.form
+++ b/modules/gateway/assertions/SplitJoinAssertion/src/main/java/com/l7tech/external/assertions/splitjoin/console/SplitVariablePropertiesDialog.form
@@ -23,7 +23,7 @@
       </vspacer>
       <component id="72e52" class="javax.swing.JLabel">
         <constraints>
-          <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+          <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="9" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <text resource-bundle="com/l7tech/external/assertions/splitjoin/console/SplitVariablePropertiesDialog" key="targetVariable"/>
@@ -46,14 +46,6 @@
         </constraints>
         <properties/>
       </component>
-      <component id="9748d" class="javax.swing.JTextField" binding="targetVariableTextField">
-        <constraints>
-          <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
-            <preferred-size width="150" height="-1"/>
-          </grid>
-        </constraints>
-        <properties/>
-      </component>
       <component id="b964b" class="javax.swing.JTextField" binding="splitPatternTextField">
         <constraints>
           <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
@@ -70,6 +62,15 @@
           <text resource-bundle="com/l7tech/external/assertions/splitjoin/console/SplitVariablePropertiesDialog" key="regExCheckBox"/>
         </properties>
       </component>
+      <grid id="712d6" binding="targetVariablePanel" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+        <margin top="0" left="0" bottom="0" right="0"/>
+        <constraints>
+          <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties/>
+        <border type="none"/>
+        <children/>
+      </grid>
     </children>
   </grid>
 </form>
