--- a/modules/gateway/assertions/XacmlPdpAssertion/src/main/java/com/l7tech/external/assertions/xacmlpdp/console/resources/XacmlRequestBuilderRequestPanel.form
+++ b/modules/gateway/assertions/XacmlPdpAssertion/src/main/java/com/l7tech/external/assertions/xacmlpdp/console/resources/XacmlRequestBuilderRequestPanel.form
@@ -75,7 +75,7 @@
       </grid>
       <component id="493e7" class="javax.swing.JLabel">
         <constraints>
-          <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+          <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="9" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <labelFor value="fd49a"/>
@@ -92,18 +92,19 @@
         <children>
           <component id="fd49a" class="javax.swing.JComboBox" binding="outputMessageComboBox">
             <constraints>
-              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
+              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="9" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties/>
           </component>
-          <component id="c099b" class="javax.swing.JTextField" binding="outputMessageContextVarField">
+          <grid id="73824" binding="outputMessageContextVarPanel" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+            <margin top="0" left="0" bottom="0" right="0"/>
             <constraints>
-              <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="7" anchor="8" fill="1" indent="0" use-parent-layout="false">
-                <preferred-size width="150" height="-1"/>
-              </grid>
+              <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="3" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties/>
-          </component>
+            <border type="none"/>
+            <children/>
+          </grid>
         </children>
       </grid>
     </children>
