--- a/modules/gateway/console/src/main/java/com/l7tech/console/panels/resources/SetVariableAssertionDialog.form
+++ b/modules/gateway/console/src/main/java/com/l7tech/console/panels/resources/SetVariableAssertionDialog.form
@@ -11,23 +11,6 @@
     </properties>
     <border type="none"/>
     <children>
-      <component id="a3fec" class="javax.swing.JLabel">
-        <constraints>
-          <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
-        </constraints>
-        <properties>
-          <labelFor value="8b1de"/>
-          <text value="&amp;Variable Name:"/>
-        </properties>
-      </component>
-      <component id="8b1de" class="javax.swing.JTextField" binding="_variableNameTextField">
-        <constraints>
-          <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
-            <preferred-size width="150" height="-1"/>
-          </grid>
-        </constraints>
-        <properties/>
-      </component>
       <component id="914d8" class="javax.swing.JLabel">
         <constraints>
           <grid row="5" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="9" fill="0" indent="0" use-parent-layout="false"/>
@@ -117,15 +100,6 @@
           <grid row="4" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false">
             <preferred-size width="16" height="16"/>
           </grid>
-        </constraints>
-        <properties>
-          <icon value="com/l7tech/console/resources/Warning16.png"/>
-          <text value="status"/>
-        </properties>
-      </component>
-      <component id="114bd" class="javax.swing.JLabel" binding="_variableNameStatusLabel">
-        <constraints>
-          <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <icon value="com/l7tech/console/resources/Warning16.png"/>
@@ -228,6 +202,23 @@
         </constraints>
         <properties>
           <editable value="true"/>
+        </properties>
+      </component>
+      <grid id="17b65" binding="_variableNamePanel" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+        <margin top="0" left="0" bottom="0" right="0"/>
+        <constraints>
+          <grid row="0" column="1" row-span="2" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties/>
+        <border type="none"/>
+        <children/>
+      </grid>
+      <component id="a3fec" class="javax.swing.JLabel">
+        <constraints>
+          <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <text value="&amp;Variable Name:"/>
         </properties>
       </component>
     </children>
