--- a/modules/gateway/console/src/main/java/com/l7tech/console/panels/CreateSecurityContextTokenPropertiesDialog.form
+++ b/modules/gateway/console/src/main/java/com/l7tech/console/panels/CreateSecurityContextTokenPropertiesDialog.form
@@ -3,7 +3,7 @@
   <grid id="27dc6" binding="mainPanel" layout-manager="GridLayoutManager" row-count="4" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="10" left="10" bottom="10" right="10"/>
     <constraints>
-      <xy x="20" y="20" width="518" height="188"/>
+      <xy x="20" y="20" width="518" height="193"/>
     </constraints>
     <properties/>
     <border type="none"/>
@@ -119,24 +119,20 @@
               <text value="Variable Prefix:"/>
             </properties>
           </component>
-          <component id="c0876" class="javax.swing.JTextField" binding="varPrefixTextField">
+          <grid id="b29bd" binding="varPrefixPanel" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+            <margin top="0" left="0" bottom="0" right="0"/>
             <constraints>
-              <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
+              <grid row="0" column="1" row-span="2" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
             </constraints>
-            <properties>
-              <toolTipText value="Optionally specify a variable prefix."/>
-            </properties>
-          </component>
-          <component id="7ca6" class="javax.swing.JLabel" binding="varPrefixStatusLabel">
+            <properties/>
+            <border type="none"/>
+            <children/>
+          </grid>
+          <vspacer id="995f3">
             <constraints>
-              <grid row="1" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+              <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
             </constraints>
-            <properties>
-              <icon value="com/l7tech/console/resources/Warning16.png"/>
-              <text value="status"/>
-              <visible value="true"/>
-            </properties>
-          </component>
+          </vspacer>
         </children>
       </grid>
     </children>
