--- a/modules/gateway/assertions/LDAPQueryAssertion/src/main/java/com/l7tech/external/assertions/ldapquery/console/AttributeVariableMapDialog.form
+++ b/modules/gateway/assertions/LDAPQueryAssertion/src/main/java/com/l7tech/external/assertions/ldapquery/console/AttributeVariableMapDialog.form
@@ -3,7 +3,7 @@
   <grid id="27dc6" binding="mainPanel" layout-manager="GridLayoutManager" row-count="2" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="10" left="10" bottom="10" right="10"/>
     <constraints>
-      <xy x="20" y="20" width="500" height="400"/>
+      <xy x="20" y="20" width="559" height="189"/>
     </constraints>
     <properties/>
     <border type="none"/>
@@ -21,7 +21,7 @@
               <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <text value="&amp;Cancel"/>
+              <text resource-bundle="com/l7tech/external/assertions/ldapquery/console/AttributeVariableMapDialog" key="button.cancel"/>
             </properties>
           </component>
           <component id="e6c17" class="javax.swing.JButton" binding="OKButton" default-binding="true">
@@ -29,7 +29,7 @@
               <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <text value="&amp;OK"/>
+              <text resource-bundle="com/l7tech/external/assertions/ldapquery/console/AttributeVariableMapDialog" key="button.ok"/>
             </properties>
           </component>
         </children>
@@ -48,7 +48,7 @@
             </constraints>
             <properties>
               <labelFor value="eb197"/>
-              <text value="LDAP &amp;Attribute Name:"/>
+              <text resource-bundle="com/l7tech/external/assertions/ldapquery/console/AttributeVariableMapDialog" key="label.name"/>
             </properties>
           </component>
           <component id="67aa7" class="javax.swing.JLabel">
@@ -56,7 +56,7 @@
               <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="9" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <text value="Context &amp;Variable Name:"/>
+              <text resource-bundle="com/l7tech/external/assertions/ldapquery/console/AttributeVariableMapDialog" key="label.variable-name"/>
             </properties>
           </component>
           <component id="eb197" class="javax.swing.JTextField" binding="attributeName">
@@ -85,7 +85,7 @@
             </constraints>
             <properties>
               <labelFor value="11874"/>
-              <text value="If &amp;multivalued:"/>
+              <text resource-bundle="com/l7tech/external/assertions/ldapquery/console/AttributeVariableMapDialog" key="label.if-multivalued"/>
             </properties>
           </component>
           <grid id="40f40" binding="variableNamePanel" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
