SSM-3153: Change label in WssConfig properties dialog Encryption tab that refers to "bulk encryption" so it calls it "data encryption" instead.
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@27768 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/console/src/main/java/com/l7tech/console/panels/resources/WssConfigurationAssertionProperties.form
+++ b/modules/gateway/console/src/main/java/com/l7tech/console/panels/resources/WssConfigurationAssertionProperties.form
@@ -166,7 +166,7 @@
                 </constraints>
                 <properties>
                   <labelFor value="e9e4"/>
-                  <text value="Bulk &amp;Encryption Algorithm:"/>
+                  <text value="Data &amp;Encryption Algorithm:"/>
                 </properties>
               </component>
               <vspacer id="bcc74">
