SSG-4642 updated ServerSophosAssertion to fail assertion if sophos server not reachable rather than throwing an IO Exception which fails the policy
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@28129 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/assertions/SophosAssertion/src/main/java/com/l7tech/external/assertions/sophos/console/resources/GetIpPortDialog.form
+++ b/modules/gateway/assertions/SophosAssertion/src/main/java/com/l7tech/external/assertions/sophos/console/resources/GetIpPortDialog.form
@@ -81,9 +81,11 @@
               <text value="Port"/>
             </properties>
           </component>
-          <component id="b61ca" class="javax.swing.JSpinner" binding="portSpinner">
+          <component id="93c4b" class="javax.swing.JTextField" binding="portField">
             <constraints>
-              <grid row="0" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
+              <grid row="0" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+                <preferred-size width="100" height="-1"/>
+              </grid>
             </constraints>
             <properties/>
           </component>
