Restored resource binding that was somehow messed up prior to previous commit.
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@28350 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/console/src/main/java/com/l7tech/console/panels/RemoveElementPropertiesDialog.form
+++ b/modules/gateway/console/src/main/java/com/l7tech/console/panels/RemoveElementPropertiesDialog.form
@@ -62,7 +62,8 @@
               <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="9" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <text value="Context variable name:"/>
+              <text resource-bundle="com/l7tech/console/panels/RemoveElementPropertiesDialog" key="field.existing.label"/>
+              <toolTipText resource-bundle="com/l7tech/console/panels/RemoveElementPropertiesDialog" key="field.existing.tooltip"/>
             </properties>
           </component>
           <grid id="33f58" binding="existingElementPanel" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
@@ -154,6 +155,7 @@
             </constraints>
             <properties>
               <text resource-bundle="com/l7tech/console/panels/RemoveElementPropertiesDialog" key="field.new.label"/>
+              <toolTipText resource-bundle="com/l7tech/console/panels/RemoveElementPropertiesDialog" key="field.new.tooltip"/>
             </properties>
           </component>
           <grid id="f2395" binding="newElementPanel" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
