SSG-4402: The license generator's custom feature name field is now an editable combo box, offering default values configured via the licenseGenerator.featureLabels propertly.  This can be used to quickly and reliably select a custom feature name such as "SecureSpan SOA Gateway" to display in the grants panel in place of whatever feature name would otherwise be generated from the enabled product profile names.
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@28406 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/internal/src/main/java/com/l7tech/internal/license/gui/resources/LicenseSpecPanel.form
+++ b/modules/internal/src/main/java/com/l7tech/internal/license/gui/resources/LicenseSpecPanel.form
@@ -463,14 +463,6 @@
           </grid>
         </constraints>
       </vspacer>
-      <component id="5a048" class="javax.swing.JTextField" binding="featureLabelField">
-        <constraints>
-          <grid row="16" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
-            <preferred-size width="150" height="-1"/>
-          </grid>
-        </constraints>
-        <properties/>
-      </component>
       <component id="d8bc1" class="javax.swing.JButton" binding="defaultFeatureLabelButton">
         <constraints>
           <grid row="16" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
@@ -530,6 +522,15 @@
             <item value="Layer 7 SecureSpan Suite"/>
             <item value="Layer 7 Enterprise Service Manager"/>
           </model>
+        </properties>
+      </component>
+      <component id="1a91e" class="javax.swing.JComboBox" binding="featureLabelComboBox">
+        <constraints>
+          <grid row="16" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <editable value="true"/>
+          <model/>
         </properties>
       </component>
     </children>
